--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,11 @@ input[type="number"] {
 .red {
     color: red;
 }
+
+/* Add this CSS rule to remove the up and down arrows on number inputs */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+    margin: 0;
+}
